fixing review comments and updated merchant application name

--- a/adyen-appexchange/main/default/classes/AdyenPaymentHelper.cls
+++ b/adyen-appexchange/main/default/classes/AdyenPaymentHelper.cls
@@ -121,7 +121,7 @@ public with sharing class AdyenPaymentHelper {
 
         notificationRequestItem = parseAdyenNotificationRequest( paymentGatewayNotificationRequest );
 
-        String pspReference = notificationRequestItem.originalReference != null ? notificationRequestItem.originalReference : notificationRequestItem.paymentPspReference;
+        String pspReference = notificationRequestItem.originalReference != null ? notificationRequestItem.originalReference : notificationRequestItem.pspReference;
         String apexAdapterId = AdyenPaymentUtility.retrieveApexAdapterId(pspReference);
         System.debug('---->apexAdapterId =' + apexAdapterId);
 
