Make authorization work without tokenization-PW-6571 (#5)
* Make authorization work without tokenization-PW-6571

* Deleted commented code

* fixed requestType Capture

* pushing adyenPaymentMethod LWC and controller to the repo

* removing adyenPaymentMethod lwc and controller from repo

* Adding adyenPaymentMethod LWC and controller to the repo

* Changes to the controller-removing debug statements

* removing lwc adyenPaymentMethod and controller

* Fixing review comments

* Test class changes

* Removed Sales Channel related code and unwanted fields and corresponding code references from package

* Pushing changes done to resolve endpoint issue and readd adyen payment method field and custommetadata retrieval logic

* Fix for rounding issue

* added gatewayrefdetails to the query for payment and paymentauthorization

* removing shopperIp from authorizationRequest as authRequest does not have this information

* remove nulls from /payments call

* fixing review comments and updated merchant application name

Co-authored-by: basm <bas.maassen@adyen.com>

--- a/adyen-appexchange/main/default/classes/AdyenPaymentUtility.cls
+++ b/adyen-appexchange/main/default/classes/AdyenPaymentUtility.cls
@@ -61,6 +61,13 @@ public with sharing class AdyenPaymentUtility {
     }
 
     /**
+    * Round an amount to a normalized value for consistency
+    */
+    public static Double normalizeAmount(Double amount) {
+        return Double.valueOf(Decimal.valueOf(amount).setScale(2, System.RoundingMode.HALF_EVEN));
+    }
+
+    /**
     * Get the shopper reference from the card payment method.
     * - GatewayTokenDetails should be populated with the value from the Adyen tokenization response
     * - An encoded hash of the user's email
@@ -81,17 +88,13 @@ public with sharing class AdyenPaymentUtility {
     public static Payment retrievePayment(Id paymentId) {
         if (
             Schema.sObjectType.Payment.fields.Id.isAccessible() && 
-            Schema.sObjectType.Payment.fields.GatewayRefNumber.isAccessible() && 
-            Schema.sObjectType.Payment.fields.adyenOverrideMerchantConfig__c.isAccessible() &&
-            Schema.sObjectType.PaymentAuthorization.fields.GatewayRefNumber.isAccessible() && 
-            Schema.sObjectType.PaymentAuthorization.fields.adyenOverrideMerchantConfig__c.isAccessible() &&
+            Schema.sObjectType.Payment.fields.GatewayRefNumber.isAccessible() &&
+            Schema.sObjectType.PaymentAuthorization.fields.GatewayRefNumber.isAccessible() &&
+            Schema.sObjectType.PaymentAuthorization.fields.GatewayRefDetails.isAccessible() &&
             Schema.sObjectType.Payment.fields.CurrencyIsoCode.isAccessible() && 
-            Schema.sObjectType.OrderPaymentSummary.fields.FullName.isAccessible() && 
-            Schema.sObjectType.SalesChannel.fields.AdyenMerchantID__c.isAccessible()
+            Schema.sObjectType.OrderPaymentSummary.fields.FullName.isAccessible()
         ) {
-            return [SELECT Id, GatewayRefNumber, PaymentAuthorization.GatewayRefNumber, 
-                        adyenOverrideMerchantConfig__c, PaymentAuthorization.adyenOverrideMerchantConfig__c,
-                        OrderPaymentSummary.OrderSummary.SalesChannel.AdyenMerchantID__c,
+            return [SELECT Id, GatewayRefNumber, PaymentAuthorization.GatewayRefNumber, PaymentAuthorization.GatewayRefDetails,
                         CurrencyIsoCode, OrderPaymentSummary.FullName
                     FROM Payment
                     WHERE Id = :paymentId
@@ -112,16 +115,12 @@ public with sharing class AdyenPaymentUtility {
             return new Adyen_Adapter__mdt(
                 MasterLabel = 'AdyenDefault',
                 Single_Currency_Code__c = 'USD',
-                System_Integrator_Name__c = 'CAPGEMINI',
+                System_Integrator_Name__c = 'Test integrator',
                 Endpoint_Method__c = 'POST',
                 Authorize_Endpoint__c = '/payments',
-                Tokenize_Endpoint__c = '/payments',
                 Refund_Endpoint__c = '/{paymentPspReference}/refund',
                 Capture_Endpoint__c = '/{paymentPspReference}/capture',
-                Cancel_Endpoint__c = '/{paymentPspReference}/cancel',
-                Endpoint_Api_Version__c = '/v1',
-                Service_Password__c = 'ABC123',
-                Service_Username__c = 'TEST_USER'
+                Endpoint_Api_Version__c = '/v1'
             );
         } else if (
             Schema.sObjectType.Adyen_Adapter__mdt.fields.Developername.isAccessible() && Schema.sObjectType.Adyen_Adapter__mdt.fields.NamespacePrefix.isAccessible() &&
@@ -129,14 +128,12 @@ public with sharing class AdyenPaymentUtility {
             Schema.sObjectType.Adyen_Adapter__mdt.fields.Endpoint_Api_Version__c.isAccessible() && Schema.sObjectType.Adyen_Adapter__mdt.fields.Endpoint_Method__c.isAccessible() &&
             Schema.sObjectType.Adyen_Adapter__mdt.fields.Endpoint_Path__c.isAccessible() && Schema.sObjectType.Adyen_Adapter__mdt.fields.Merchant_Account__c.isAccessible() &&
             Schema.sObjectType.Adyen_Adapter__mdt.fields.System_Integrator_Name__c.isAccessible() && Schema.sObjectType.Adyen_Adapter__mdt.fields.Refund_Endpoint__c.isAccessible() &&
-            Schema.sObjectType.Adyen_Adapter__mdt.fields.Tokenize_Endpoint__c.isAccessible() && Schema.sObjectType.Adyen_Adapter__mdt.fields.Authorize_Endpoint__c.isAccessible() &&
-            Schema.sObjectType.Adyen_Adapter__mdt.fields.Single_Currency_Code__c.isAccessible() && Schema.sObjectType.Adyen_Adapter__mdt.fields.Service_Username__c.isAccessible() && 
-            Schema.sObjectType.Adyen_Adapter__mdt.fields.Service_Password__c.isAccessible() && Schema.sObjectType.Adyen_Adapter__mdt.fields.Cancel_Endpoint__c.isAccessible()
-        ) {
+            Schema.sObjectType.Adyen_Adapter__mdt.fields.Authorize_Endpoint__c.isAccessible() &&
+            Schema.sObjectType.Adyen_Adapter__mdt.fields.Single_Currency_Code__c.isAccessible() ) {
             return [SELECT Developername, NamespacePrefix, MasterLabel, Capture_Endpoint__c, Endpoint_Api_Version__c, 
                         System_Integrator_Name__c, Endpoint_Method__c, Endpoint_Path__c, Merchant_Account__c, 
-                        Refund_Endpoint__c, Single_Currency_Code__c, Service_Username__c, Service_Password__c,
-                        Authorize_Endpoint__c, Tokenize_Endpoint__c, Cancel_Endpoint__c
+                        Refund_Endpoint__c, Single_Currency_Code__c,
+                        Authorize_Endpoint__c
                     FROM Adyen_Adapter__mdt
                     WHERE Developername = :metaType
                     LIMIT 1];
@@ -156,20 +153,17 @@ public with sharing class AdyenPaymentUtility {
             Schema.sObjectType.PaymentAuthorization.fields.Id.isAccessible() &&
             Schema.sObjectType.PaymentAuthorization.fields.PaymentAuthorizationNumber.isAccessible() &&
             Schema.sObjectType.PaymentAuthorization.fields.GatewayRefNumber.isAccessible() &&
+            Schema.sObjectType.PaymentAuthorization.fields.GatewayRefDetails.isAccessible() &&
             Schema.sObjectType.PaymentAuthorization.fields.CurrencyIsoCode.isAccessible() &&
-            Schema.sObjectType.PaymentAuthorization.fields.adyenOverrideMerchantConfig__c.isAccessible() &&
             Schema.sObjectType.PaymentGatewayLog.fields.GatewayRefNumber.isAccessible() &&
             Schema.sObjectType.OrderPaymentSummary.fields.Id.isAccessible() &&
-            Schema.sObjectType.OrderPaymentSummary.fields.FullName.isAccessible() && 
-            Schema.sObjectType.SalesChannel.fields.ADYENMERCHANTID__c.isAccessible()
+            Schema.sObjectType.OrderPaymentSummary.fields.FullName.isAccessible()
         )
-            return [SELECT Id, PaymentAuthorizationNumber, GatewayRefNumber, adyenOverrideMerchantConfig__c,
+            return [SELECT Id, PaymentAuthorizationNumber, GatewayRefNumber, GatewayRefDetails,
                         OrderPaymentSummary.LastPaymentGatewayLog.GatewayRefNumber,
                         OrderPaymentSummary.Id,
                         OrderPaymentSummary.FullName, CurrencyIsoCode,
-                        OrderPaymentSummary.OrderSummary.Id,
-                        OrderPaymentSummary.OrderSummary.Adyen_paymentMethod__c,
-                        OrderPaymentSummary.OrderSummary.SalesChannel.ADYENMERCHANTID__c
+                        OrderPaymentSummary.OrderSummary.Id
                     FROM PaymentAuthorization
                     WHERE Id = :paymentAuthId
                     ORDER BY CreatedDate DESC
@@ -269,7 +263,8 @@ public with sharing class AdyenPaymentUtility {
                 if (payment.PaymentGateway?.PaymentGatewayProvider?.ApexAdapter != null)
                     apexAdapterId = payment.PaymentGateway.PaymentGatewayProvider.ApexAdapter.Id;
             }
-        return apexAdapterId;
+        }
+         return apexAdapterId;
     }
 
     /**
@@ -332,13 +327,12 @@ public with sharing class AdyenPaymentUtility {
         ApplicationInfo info = new ApplicationInfo();
 
         CommonField merchantApplication = new CommonField();
-        merchantApplication.name = 'AdyenSOM';
+        merchantApplication.name = 'adyen-salesforce-b2b-lightning';
         merchantApplication.version = '1.0';
         info.merchantApplication = merchantApplication;
 
         ExternalPlatform exPlatform = new ExternalPlatform();
-        exPlatform.name = 'Salesforce Order Management';
-        exPlatform.version = '2020_winter';
+        exPlatform.name = 'Salesforce B2B Lightning';
         exPlatform.integrator = integratorName;
         info.externalPlatform = exPlatform;
         return info;
@@ -347,21 +341,21 @@ public with sharing class AdyenPaymentUtility {
     /**
     * Create a modification request by populating required properties (payment/refund)
     *
-    * @return ModificationRequest to send to Adyen.
+    * @return CheckoutModificationRequest to send to Adyen.
     */
-    public ModificationRequest createModificationRequest(CommercePayments.RequestType paymentType, String currencyCode, Double amount, String pspReference) {
-       ModificationRequest modRequest;
+    public static CheckoutModificationRequest createModificationRequest(CommercePayments.RequestType paymentType, String currencyCode, Double amount, String pspReference, String merchantAccount) {
+       CheckoutModificationRequest modRequest;
        if (paymentType == CommercePayments.RequestType.Capture) {
-         modRequest = new CaptureRequest();
-       } else if (paymentType == CommercePayments.RequestType.ReferencedRefundRequest) {
-         modRequest = new RefundRequest();
+         modRequest = new CheckoutCaptureRequest();
+       } else if (paymentType == CommercePayments.RequestType.ReferencedRefund) {
+         modRequest = new CheckoutRefundRequest();
        }
-       modRequest.reference = AdyenPaymentUtility.getRandomNumber(16);
-       modRequest.originalReference = pspReference;
-       modRequest.merchantAccount = adyenAdapterMdt.Merchant_Account__c;
-       modRequest.amount = new Amount();
-       modRequest.amount.value = (amount * AdyenPaymentUtility.getAmountMultiplier(currencyCode)).longValue();
-       modRequest.amount.currency_x = currencyCode;
+       modRequest.setReference(AdyenPaymentUtility.getRandomNumber(16));
+       modRequest.setMerchantAccount(merchantAccount);
+       Amount requestAmount = new Amount();
+       requestAmount.value = (amount * AdyenPaymentUtility.getAmountMultiplier(currencyCode)).longValue();
+       requestAmount.currency_x = currencyCode;
+       modRequest.setAmount(requestAmount);
        return modRequest;
     }
 
@@ -370,55 +364,13 @@ public with sharing class AdyenPaymentUtility {
     *
     * @return response from adyen platform.
     */
-    public ModificationResponse sendModificationRequest(CommercePayments.RequestType paymentType, ModificationRequest modRequest, String endPoint) {
-        ModificationResponse adyenResponse;
+    public static HttpResponse sendModificationRequest(CheckoutModificationRequest modRequest, Adyen_Adapter__mdt adyenAdapterMdt, String endPoint) {
+        CheckoutModificationResponse adyenResponse;
         String body = AdyenPaymentUtility.makeAdyenCompatible(JSON.serialize(modRequest));
         AdyenService client = new AdyenService(adyenAdapterMdt);
         client.setEndpoint(endPoint);
         client.setBody(body);
-        client.setReference(modRequest.originalReference);
         HttpResponse response = client.execute();
-        if (paymentType == CommercePayments.RequestType.Capture) {
-            adyenResponse = (CaptureResponse)JSON.deserializeStrict(AdyenPaymentUtility.makeSalesforceCompatible(response.getBody()), CaptureResponse.class);
-        } else if (paymentType == CommercePayments.RequestType.ReferencedRefundRequest) {
-            adyenResponse = (RefundResponse)JSON.deserializeStrict(AdyenPaymentUtility.makeSalesforceCompatible(response.getBody()), RefundResponse.class);
-        }
-        return adyenResponse;
-    }
-
-     /**
-     * @param adyenResponse: Response from Adyens api after requesting a capture/refund
-     * @return CommercePayments.GatewayResponse with populated properties.
-     */
-
-    public CommercePayments.GatewayResponse processAdyenResponse(HttpResponse adyenResponse, Double amount, CommercePayments.RequestType paymentType) {
-        String gatewayMessage = '';
-        CommercePayments.GatewayResponse salesforceResponse;
-        if (paymentType == CommercePayments.RequestType.Capture) {
-             salesforceResponse = new CommercePayments.CaptureResponse();
-             gatewayMessage = '[capture-received]';
-        } else if (paymentType == CommercePayments.RequestType.ReferencedRefund) {
-             salesforceResponse = new CommercePayments.ReferencedRefundRequest();
-             gatewayMessage = '[refund-received]';
-        }
-        salesforceResponse.setAsync(true);
-        salesforceResponse.setAmount(amount);
-        salesforceResponse.setGatewayDate(System.now());
-        salesforceResponse.setGatewayMessage(adyenResponse.status);
-        salesforceResponse.setGatewayReferenceDetails(adyenResponse.reference);
-        salesforceResponse.setGatewayResultCode(adyenResponse.status);
-        salesforceResponse.setGatewayResultCodeDescription(adyenResponse.message);
-
-        if (adyenResponse != null && salesforceResponse.getStatusCode() != AdyenConstants.HTTP_ERROR_CODE) { // HTTP connection with Adyen was successful
-           salesforceResponse.setGatewayReferenceNumber(adyenResponse.pspReference);
-           salesforceResponse.setSalesforceResultCodeInfo(AdyenConstants.SUCCESS_SALESFORCE_RESULT_CODE_INFO);
-           if (salesforceResponse.status == 'received') {
-            salesforceResponse.setGatewayMessage(gatewayMessage);
-           }
-        } else {
-           salesforceResponse.setGatewayReferenceNumber(null);
-           salesforceResponse.setSalesforceResultCodeInfo(AdyenConstants.SYSTEM_ERROR_SALESFORCE_RESULT_CODE_INFO);
-        }
-        return salesforceResponse;
+        return response;
     }
 }
