--- a/adyen-appexchange/main/default/classes/AdyenRefundHelper.cls
+++ b/adyen-appexchange/main/default/classes/AdyenRefundHelper.cls
@@ -10,11 +10,11 @@ public with sharing class AdyenRefundHelper {
      *
      * @see AdyenService
     */
-    private static CommercePayments.GatewayResponse refund(CommercePayments.ReferencedRefund refundRequest) {
+    public static CommercePayments.GatewayResponse refund(CommercePayments.ReferencedRefundRequest refundRequest) {
 
         // Retrieve the Payment
         Payment payment = AdyenPaymentUtility.retrievePayment(refundRequest.PaymentId);
-
+        String adapterName = payment?.PaymentAuthorization?.GatewayRefDetails;
         String errorMessage = null;
         if(payment == null) {
             errorMessage = 'Payment Info Missing';
@@ -25,28 +25,43 @@ public with sharing class AdyenRefundHelper {
         if(errorMessage != null) {
             throw new AdyenAsyncAdapter.GatewayException(errorMessage);
         }
-        // By Default, retrieve the metadata key from the order's sales channel
-        String adapterName = payment.OrderPaymentSummary.OrderSummary.SalesChannel.ADYENMERCHANTID__c;
-
-        // Override config for this specific Payment (i.e., a pre-capture) or inherit override from the original PaymentAuthorization
-        if (String.isNotBlank(payment.adyenOverrideMerchantConfig__c)) {
-            adapterName = payment.adyenOverrideMerchantConfig__c;
-        }
-        if (String.isNotBlank(payment.PaymentAuthorization?.adyenOverrideMerchantConfig__c)) {
-            adapterName = payment.PaymentAuthorization.adyenOverrideMerchantConfig__c;
-        }
         if (String.isBlank(adapterName)) {
             adapterName = AdyenConstants.DEFAULT_ADAPTER_NAME;
         }
-
         Adyen_Adapter__mdt adyenAdapterMdt = AdyenPaymentUtility.retrieveGatewayMetadata(adapterName);
 
         String currencyCode = adyenAdapterMdt.Single_Currency_Code__c != null ? adyenAdapterMdt.Single_Currency_Code__c : payment.CurrencyIsoCode.toUppercase();
         String pspReference = (payment.OrderPaymentSummary.FullName == 'DeclineRefund' ? 'dummytransaction' : AdyenPaymentUtility.getRefundGatewayRefNumber(payment));
-        ModificationRequest modRequest = AdyenPaymentUtility.createModificationRequest(CommercePayments.RequestType.ReferencedRefund, currencyCode, refundRequest.amount, pspReference);
-        modRequest.applicationInfo = AdyenPaymentUtility.getApplicationInfo(adyenAdapterMdt.System_Integrator_Name__c);
+        CheckoutModificationRequest modRequest = AdyenPaymentUtility.createModificationRequest(CommercePayments.RequestType.ReferencedRefund, currencyCode, refundRequest.amount, pspReference, adyenAdapterMdt.Merchant_Account__c);
+        String refundEndPointURL = adyenAdapterMdt.Refund_Endpoint__c;
+        refundEndPointURL = refundEndPointURL.replace('{paymentPspReference}', pspReference);
+        HttpResponse adyenHttpResponse = AdyenPaymentUtility.sendModificationRequest(modRequest, adyenAdapterMdt, refundEndPointURL);
+        return processRefundResponse(adyenHttpResponse, refundRequest.amount);
+    }
 
-        ModificationResponse modResponse = AdyenPaymentUtility.sendModificationRequest(CommercePayments.RequestType.ReferencedRefund, modRequest, adyenAdapterMdt.Refund_Endpoint__c);
-        return AdyenPaymentUtility.processAdyenResponse(modResponse, refundRequest.amount, CommercePayments.RequestType.ReferencedRefund);
+    /**
+     * @param adyenResponse: Response from Adyen's api after requesting a refund
+     * @return CommercePayments.GatewayResponse with populated properties.
+    */
+    public static CommercePayments.GatewayResponse processRefundResponse(HttpResponse adyenHttpResponse, Double amount) {
+        CommercePayments.ReferencedRefundResponse salesforceResponse = new CommercePayments.ReferencedRefundResponse();
+        CheckoutRefundResponse adyenResponse = (CheckoutRefundResponse)JSON.deserializeStrict(AdyenPaymentUtility.makeSalesforceCompatible(adyenHttpResponse.getBody()), CheckoutRefundResponse.class);
+        salesforceResponse.setAsync(true);
+        salesforceResponse.setAmount(amount);
+        salesforceResponse.setGatewayDate(System.now());
+        salesforceResponse.setGatewayReferenceDetails(adyenResponse.getReference());
+        salesforceResponse.setGatewayResultCode(adyenResponse.getStatus());
+
+        if (adyenResponse != null && adyenHttpResponse.getStatusCode() != AdyenConstants.HTTP_ERROR_CODE) { // HTTP connection with Adyen was successful
+           salesforceResponse.setGatewayReferenceNumber(adyenResponse.getPSPReference());
+           salesforceResponse.setSalesforceResultCodeInfo(AdyenConstants.SUCCESS_SALESFORCE_RESULT_CODE_INFO);
+           if (adyenResponse.getStatus() == AdyenConstants.NOTIFICATION_RECEIVED_CHECKOUT) {
+            salesforceResponse.setGatewayMessage('[refund-received]');
+           }
+        } else {
+           salesforceResponse.setGatewayReferenceNumber(null);
+           salesforceResponse.setSalesforceResultCodeInfo(AdyenConstants.SYSTEM_ERROR_SALESFORCE_RESULT_CODE_INFO);
+        }
+        return salesforceResponse;
     }
 }
