--- a/adyen-appexchange/main/default/classes/AdyenPaymentHelper.cls
+++ b/adyen-appexchange/main/default/classes/AdyenPaymentHelper.cls
@@ -1,12 +1,12 @@
 public with sharing class AdyenPaymentHelper {
 
     @TestVisible
-    public static String TEST_PMID;
+    public static String TEST_PAYMENT_METHOD_ID;
     @TestVisible
-    public static String TEST_NR_BODY;
+    public static String TEST_NOTIFICATION_REQUEST_BODY;
 
      /**
-     *  Receives Payement Gateway Context from AdyenAsyncAdapter, looks at the context type and then invokes the appropriate Capture or Refund operation
+     *  Receives Payment Gateway Context from AdyenAsyncAdapter, looks at the context type and then invokes the appropriate Capture or Refund operation
      * 
      * @param paymentGatewayContext
      * @return `CommercePayments.GatewayResponse`
@@ -19,109 +19,12 @@ public with sharing class AdyenPaymentHelper {
         System.debug('------------->Adyen payment req type: ' + paymentRequestType);
 
         try {
-            if     (paymentRequestType == CommercePayments.RequestType.Tokenize)              return tokenize((CommercePayments.PaymentMethodTokenizationRequest)paymentRequest);
-            else if(paymentRequestType == CommercePayments.RequestType.Authorize)             return authorize((CommercePayments.AuthorizationRequest)paymentRequest);
+            if(paymentRequestType == CommercePayments.RequestType.Authorize)                  return authorize((CommercePayments.AuthorizationRequest)paymentRequest);
             else if(paymentRequestType == CommercePayments.RequestType.Capture)               return AdyenCaptureHelper.capture((CommercePayments.CaptureRequest)paymentRequest);
             else if(paymentRequestType == CommercePayments.RequestType.ReferencedRefund)      return AdyenRefundHelper.refund((CommercePayments.ReferencedRefundRequest)paymentRequest);
-            else if(paymentRequestType == CommercePayments.RequestType.AuthorizationReversal) return cancel((CommercePayments.AuthorizationReversalRequest)paymentRequest);
             else return null;
         } catch (Exception e) {
-            return new CommercePayments.GatewayErrorResponse(String.valueOf(AdyenService.HTTP_ERROR_CODE), e.getMessage());
-        }
-    }
-
-    /**
-     * @param tokenizeRequest - The platform request to tokenize a payment method
-     * @return `CommercePayments.PaymentMethodTokenizationResponse` Includes Adyen token to use for future payments
-     * 
-     * @see https://docs.adyen.com/api-explorer/#/CheckoutService/v67/post/payments__example_payments-enableOneClick-raw
-     */
-    private static CommercePayments.GatewayResponse tokenize(CommercePayments.PaymentMethodTokenizationRequest tokenizeRequest) {
-
-        System.debug('--------->Adyen: enter tokenize method');
-
-        Adyen_Adapter__mdt adyenAdapterMdt = AdyenPaymentUtility.retrieveGatewayMetadata(AdyenConstants.DEFAULT_ADAPTER_NAME);
-        
-        // The Auth request body is the same as tokenize
-        AuthorisationRequest libRequest = new AuthorisationRequest();
-
-        libRequest.amount = new Amount();
-        libRequest.amount.currency_x = String.isNotEmpty(adyenAdapterMdt.Single_Currency_Code__c) ? adyenAdapterMdt.Single_Currency_Code__c : 'USD';
-        libRequest.amount.value = 0;
-        
-        CommercePayments.CardPaymentMethodRequest cpm = tokenizeRequest.cardPaymentMethod;
-        CardDetails paymentMethod = new CardDetails();
-        paymentMethod.number_x = cpm.cardNumber;
-        paymentMethod.expiryMonth = String.valueOf(cpm.expiryMonth);
-        paymentMethod.expiryYear = String.valueOf(cpm.expiryYear);
-        paymentMethod.holderName = cpm.cardHolderName;
-        paymentMethod.cvc = cpm.cvv;
-        libRequest.paymentMethod = paymentMethod;
-
-        CommercePayments.AddressRequest billingAddress = tokenizeRequest.address;
-        Address libAddress = new Address();
-        libAddress.houseNumberOrName = billingAddress.street;
-        libAddress.street = billingAddress.street;
-        libAddress.city = billingAddress.city;
-        libAddress.stateOrProvince = billingAddress?.state;
-        libAddress.postalcode = billingAddress.postalCode;
-        libAddress.country = billingAddress.country;
-        libRequest.billingAddress = libAddress;
-
-        libRequest.shopperInteraction = AuthorisationRequest.shopperInteractionEnum.Ecommerce;
-        libRequest.recurringProcessingModel = AuthorisationRequest.RecurringProcessingModelEnum.CardOnFile;
-        libRequest.merchantAccount = adyenAdapterMdt.Merchant_Account__c;
-        libRequest.shopperIp = tokenizeRequest?.ipAddress;
-        libRequest.storePaymentMethod = true;
-
-        // This is unique per transaction
-        libRequest.reference = AdyenPaymentUtility.getRandomNumber(16);
-
-        // This is unique per payment method, and must be re-constructable
-        libRequest.shopperReference = AdyenPaymentUtility.getShopperReference(
-            new CardPaymentMethod(
-                CardHolderName = cpm.cardHolderName,
-                Email = cpm.email
-            )
-        );
-
-        String body = AdyenPaymentUtility.makeAdyenCompatible(JSON.serialize(libRequest));
-
-        AdyenService client = new AdyenService(adyenAdapterMdt);
-        client.setEndpoint(adyenAdapterMdt.Tokenize_Endpoint__c);
-        client.setBody(body);
-
-        return processTokenizeResponse(client.execute());
-    }
-
-    private static CommercePayments.GatewayResponse processTokenizeResponse(HttpResponse response) {
-
-        Map<String,Object> body = (Map<String,Object>)JSON.deserializeUntyped(response.getBody());
-        String resultCode = (String) body.get('resultCode');
-        
-        if (resultCode != null) {
-            System.debug('-----> Adyen accepted request');
-            CommercePayments.PaymentMethodTokenizationResponse tokenizeResponse = new CommercePayments.PaymentMethodTokenizationResponse();
-            if (resultCode == 'Authorised') {
-                Map<String,Object> additionalData = (Map<String,Object>)body.get('additionalData');
-                tokenizeResponse.setGatewayToken((String)additionalData.get('recurring.recurringDetailReference'));
-                tokenizeResponse.setGatewayTokenDetails((String)additionalData.get('recurring.shopperReference'));
-                tokenizeResponse.setSalesforceResultCodeInfo(AdyenConstants.SUCCESS_SALESFORCE_RESULT_CODE_INFO);
-            } else {
-                tokenizeResponse.setGatewayResultCodeDescription((String)body.get('refusalReason'));
-                tokenizeResponse.setSalesforceResultCodeInfo(DECLINE_SALESFORCE_RESULT_CODE_INFO);
-            }
-
-            tokenizeResponse.setGatewayDate(System.now());
-
-            return tokenizeResponse;
-        } else {
-            System.debug('-----> Adyen rejected request');
-            String errorCode = String.valueOf(response.getStatusCode());
-            String errorMessage = (String)body.get('message');
-            CommercePayments.GatewayErrorResponse error = new CommercePayments.GatewayErrorResponse(errorCode, errorMessage);
-            
-            return error;
+            return new CommercePayments.GatewayErrorResponse(String.valueOf(AdyenConstants.HTTP_ERROR_CODE), e.getMessage());
         }
     }
 
@@ -138,143 +41,66 @@ public with sharing class AdyenPaymentHelper {
         System.debug('---------->Adyen: enter authorize method');
 
         Adyen_Adapter__mdt adyenAdapterMdt = AdyenPaymentUtility.retrieveGatewayMetadata(AdyenConstants.DEFAULT_ADAPTER_NAME);
-        Id cpmId = Test.isRunningTest() ? TEST_PMID : authRequest.paymentMethod.Id;
-        CardPaymentMethod cpm = [SELECT GatewayToken, GatewayTokenDetails, CardHolderName, Email
-                                 FROM CardPaymentMethod
-                                 WHERE Id = :cpmId];
 
+        CommercePayments.AuthApiPaymentMethodRequest paymentMethod = authRequest.paymentMethod;
         String currencyCode = authRequest.currencyIsoCode.toUppercase();
 
-        AuthorisationRequest libRequest = new AuthorisationRequest();
+        AuthorisationRequest authorizationRequest = new AuthorisationRequest();
+        Double authAmount = AdyenPaymentUtility.normalizeAmount(authRequest.amount);
+        authorizationRequest.amount = new Amount();
+        authorizationRequest.amount.currency_x = currencyCode;
+        authorizationRequest.amount.value = (authAmount * AdyenPaymentUtility.getAmountMultiplier(currencyCode)).longValue();
 
-        libRequest.amount = new Amount();
-        libRequest.amount.currency_x = currencyCode;
-        libRequest.amount.value = (authRequest.amount * AdyenPaymentUtility.getAmountMultiplier(currencyCode)).longValue();
-        
-        CardDetails paymentMethod = new CardDetails();
-        paymentMethod.storedPaymentMethodId = cpm.GatewayToken;
-        libRequest.paymentMethod = paymentMethod;
+        CommercePayments.CardPaymentMethodRequest cpmRequest;
+        if(paymentMethod != null) {
+            cpmRequest = paymentMethod.cardPaymentMethod;
+            CardDetails cardDetails = new CardDetails();
+            cardDetails.number_x = cpmRequest.cardNumber;
+            cardDetails.expiryMonth = String.valueOf(cpmRequest.expiryMonth);
+            cardDetails.expiryYear = String.valueOf(cpmRequest.expiryYear);
+            cardDetails.holderName = cpmRequest.cardHolderName;
+            cardDetails.cvc = cpmRequest.cvv;
+            authorizationRequest.paymentMethod = cardDetails;
+        }
 
-        libRequest.shopperReference = AdyenPaymentUtility.getShopperReference(cpm);
-        libRequest.reference = AdyenPaymentUtility.getRandomNumber(16);
-        libRequest.shopperInteraction = AuthorisationRequest.shopperInteractionEnum.ContAuth;
-        libRequest.recurringProcessingModel = AuthorisationRequest.RecurringProcessingModelEnum.CardOnFile;
-        libRequest.merchantAccount = adyenAdapterMdt.Merchant_Account__c;
-        libRequest.shopperIp = authRequest?.ipAddress;
-
-        String body = AdyenPaymentUtility.makeAdyenCompatible(JSON.serialize(libRequest));
-
+        authorizationRequest.reference = AdyenPaymentUtility.getRandomNumber(16);
+        authorizationRequest.merchantAccount = adyenAdapterMdt.Merchant_Account__c;
+        authorizationRequest.shopperInteraction = AuthorisationRequest.shopperInteractionEnum.Ecommerce;
+        authorizationRequest.applicationInfo = AdyenPaymentUtility.getApplicationInfo(adyenAdapterMdt.System_Integrator_Name__c);
+        String body = AdyenPaymentUtility.makeAdyenCompatible(JSON.serialize(authorizationRequest, true));
         AdyenService client = new AdyenService(adyenAdapterMdt);
         client.setEndpoint(adyenAdapterMdt.Authorize_Endpoint__c);
         client.setBody(body);
-
-        return processAuthResponse(client.execute(), amount);
+        HttpResponse response = client.execute();
+        return processAuthResponse(response, authAmount, adyenAdapterMdt.Merchant_Account__c);
     }
 
-    private static CommercePayments.GatewayResponse processAuthResponse(HttpResponse response, Double amount) {
-
+    private static CommercePayments.GatewayResponse processAuthResponse(HttpResponse response, Double amount, String merchantAccountName) {
         Map<String,Object> body = (Map<String,Object>)JSON.deserializeUntyped(response.getBody());
         String resultCode = (String)body.get('resultCode');
-        
         if(resultCode != null) {
             System.debug('-----> Adyen accepted request');
-
-            CommercePayments.AuthorizationResponse authResponse = new CommercePayments.AuthorizationResponse();
+            CommercePayments.AuthorizationResponse salesforceAuthResponse = new CommercePayments.AuthorizationResponse();
             if(resultCode == 'Authorised') {
                 Map<String,Object> additionalData = (Map<String,Object>)body.get('additionalData');
-                authResponse.setGatewayAuthCode((String)additionalData.get('authCode'));
-                authResponse.setSalesforceResultCodeInfo(AdyenConstants.SUCCESS_SALESFORCE_RESULT_CODE_INFO);
+                salesforceAuthResponse.setGatewayAuthCode((String)additionalData.get('authCode'));
+                salesforceAuthResponse.setSalesforceResultCodeInfo(AdyenConstants.SUCCESS_SALESFORCE_RESULT_CODE_INFO);
             } else {
-                authResponse.setGatewayResultCodeDescription((String)body.get('refusalReason'));
-                authResponse.setSalesforceResultCodeInfo(DECLINE_SALESFORCE_RESULT_CODE_INFO);
+                salesforceAuthResponse.setGatewayResultCodeDescription((String)body.get('refusalReason'));
+                salesforceAuthResponse.setSalesforceResultCodeInfo(AdyenConstants.DECLINE_SALESFORCE_RESULT_CODE_INFO);
             }
-
-            authResponse.setGatewayReferenceNumber((String)body.get('pspReference'));
-            authResponse.setAmount(amount);
-            authResponse.setGatewayDate(System.now());
-
-            return authResponse;
+            salesforceAuthResponse.setGatewayReferenceNumber((String)body.get('pspReference'));
+            salesforceAuthResponse.setAmount(amount);
+            salesforceAuthResponse.setGatewayDate(System.now());
+            salesforceAuthResponse.setGatewayReferenceDetails(merchantAccountName);
+            return salesforceAuthResponse;
         } else {
             System.debug('-----> Adyen rejected request');
-
             return new CommercePayments.GatewayErrorResponse(
                 String.valueOf(response.getStatusCode()),
                 String.valueOf(body.get('message'))
             );
         }
-    }
-
-    /**
-     * Calls the Service to post AUTHORIZATION REVERSAL to Adyen. Evaluates the response wrapped in custom class Adyen and sets appropirate
-     * props on CommercePayments.ReferenceRefundResponse.
-     *
-     * @param refundRequest   The CommercePayments.ReferencedRefundRequest Object.
-     * @return refundResponse  The CommercePayments.ReferencedRefundResponse Object.
-     *
-     * * General flow is AdyenService to post request JSON --> populateReferencedRefundResponse
-     *
-     * @see AdyenService
-     */
-    private static CommercePayments.GatewayResponse cancel(CommercePayments.AuthorizationReversalRequest cancelRequest) {
-        
-        PaymentAuthorization pa = AdyenPaymentUtility.retrievePaymentAuthorization(cancelRequest.PaymentAuthorizationId);
-        if(pa == null) throw new AdyenAsyncAdapter.GatewayException('Payment Authorization Missing');
-        String pspReference = AdyenPaymentUtility.getCaptureGatewayRefNumber(pa);
-        if(String.isBlank(pspReference)) throw new AdyenAsyncAdapter.GatewayException('PspReference Missing');
-
-        // By Default, retrieve the metadata key from the order's sales channel
-        String adapterName = String.isNotEmpty(pa.adyenOverrideMerchantConfig__c) ? pa.adyenOverrideMerchantConfig__c : pa.OrderPaymentSummary?.OrderSummary?.SalesChannel?.ADYENMERCHANTID__c; 
-        if(String.isBlank(adapterName)) adapterName = AdyenConstants.DEFAULT_ADAPTER_NAME;
-        Adyen_Adapter__mdt adyenAdapterMdt = AdyenPaymentUtility.retrieveGatewayMetadata(adapterName); 
-
-        PaymentsRequest libRequest = new PaymentsRequest();
-        libRequest.reference = pspReference;
-        libRequest.merchantAccount = adyenAdapterMdt.Merchant_Account__c;
-
-        String body = AdyenPaymentUtility.makeAdyenCompatible(JSON.serialize(libRequest));
-
-        AdyenService client = new AdyenService(adyenAdapterMdt);
-        client.setEndpoint(adyenAdapterMdt.Cancel_Endpoint__c);
-        client.setBody(body);
-        client.setReference(pspReference);
-
-        return processCancelResponse(client.execute(), cancelRequest.amount);
-    }
-
-    public static CommercePayments.GatewayResponse processCancelResponse(HttpResponse response, Double amount) {
-
-        //CaptureResponse adyenResponse = (CaptureResponse)JSON.deserializeStrict(response.getBody(), CaptureResponse.class);
-        CancelResponse adyenResponse = (CancelResponse)JSON.deserializeStrict(response.getBody(), CancelResponse.class);
-
-        CommercePayments.AuthorizationReversalResponse cancelResponse = new CommercePayments.AuthorizationReversalResponse();
-        //cancelResponse.setAsync(true);
-        cancelResponse.setAmount(amount);
-        cancelResponse.setGatewayDate(System.now());
-        cancelResponse.setGatewayMessage(adyenResponse.status);
-
-        if(adyenResponse != null && response.getStatusCode() != AdyenService.HTTP_ERROR_CODE) { // HTTP connection with Adyen was successful
-            if(adyenResponse.errorCode == null) { // Adyen accepted Cancel request
-                cancelResponse.setGatewayReferenceNumber(adyenResponse.pspReference);
-                if(adyenResponse.status == 'received') cancelResponse.setGatewayMessage('[cancel-received]');
-                cancelResponse.setGatewayReferenceDetails(adyenResponse.reference);
-                cancelResponse.setGatewayResultCode(adyenResponse.status);
-                cancelResponse.setGatewayResultCodeDescription(adyenResponse.message);
-                cancelResponse.setSalesforceResultCodeInfo(AdyenConstants.SUCCESS_SALESFORCE_RESULT_CODE_INFO);
-            } else { // Adyen did not accepted cancel request
-                cancelResponse.setGatewayMessage(adyenResponse.message);
-                cancelResponse.setGatewayReferenceDetails(adyenResponse.message);
-                cancelResponse.setGatewayResultCode(adyenResponse.errorCode);
-                cancelResponse.setGatewayResultCodeDescription(adyenResponse.message);
-            }
-        } else { // HTTP connection issue
-            cancelResponse.setGatewayReferenceNumber(null);
-            cancelResponse.setGatewayMessage(adyenResponse.message);
-            cancelResponse.setGatewayReferenceDetails(adyenResponse.message);
-            cancelResponse.setGatewayResultCode(adyenResponse.errorCode);
-            cancelResponse.setGatewayResultCodeDescription(adyenResponse.message);
-            cancelResponse.setSalesforceResultCodeInfo(AdyenConstants.SYSTEM_ERROR_SALESFORCE_RESULT_CODE_INFO);
-        }
-        return cancelResponse;
     }
 
     /**
@@ -295,7 +121,7 @@ public with sharing class AdyenPaymentHelper {
 
         notificationRequestItem = parseAdyenNotificationRequest( paymentGatewayNotificationRequest );
 
-        String pspReference = notificationRequestItem.originalReference != null ? notificationRequestItem.originalReference : notificationRequestItem.paymentPspReference;
+        String pspReference = notificationRequestItem.originalReference != null ? notificationRequestItem.originalReference : notificationRequestItem.pspReference;
         String apexAdapterId = AdyenPaymentUtility.retrieveApexAdapterId(pspReference);
         System.debug('---->apexAdapterId =' + apexAdapterId);
 
@@ -314,24 +140,24 @@ public with sharing class AdyenPaymentHelper {
             if(notificationSaveResult != null) {
                 if(notificationSaveResult.isSuccess()) { // Notification is accepted by the platform
                     gatewayNotificationResponse.setStatusCode(AdyenConstants.HTTP_SUCCESS_CODE);
-                    gatewayNotificationResponse.setResponseBody(Blob.valueOf( NOTIFICATION_ACCEPTED_RESPONSE ));
+                    gatewayNotificationResponse.setResponseBody(Blob.valueOf(AdyenConstants.NOTIFICATION_ACCEPTED_RESPONSE));
                     System.debug('---->Exiting AdyenPaymentHelper.handleAsyncNotificationCallback after the notification is accepted = ' + gatewayNotificationResponse);
                 } else { // Notification is not accepted by the platform, generate system event
                     String msg = '[accepted] ';
                     if(notificationSaveResult != null && notificationSaveResult.getErrorMessage() != null) {
                         msg += notificationSaveResult.getErrorMessage();
                     }
-                    gatewayNotificationResponse.setStatusCode(Integer.valueOf(AdyenService.HTTP_ERROR_CODE));
+                    gatewayNotificationResponse.setStatusCode(Integer.valueOf(AdyenConstants.HTTP_ERROR_CODE));
                     gatewayNotificationResponse.setResponseBody(Blob.valueOf(msg));
                 }
             } else {
                 String msg = '[accepted] But unsupported notification type = ' + notificationRequestItem.eventCode;
-                gatewayNotificationResponse.setResponseBody(Blob.valueOf( msg ));
+                gatewayNotificationResponse.setResponseBody(Blob.valueOf(msg));
                 gatewayNotificationResponse.setStatusCode(AdyenConstants.HTTP_SUCCESS_CODE);
             }
         } else {
             String msg = '[accepted] But not processed - wrong payment adapter or wrong instance';
-            gatewayNotificationResponse.setResponseBody(Blob.valueOf( msg ));
+            gatewayNotificationResponse.setResponseBody(Blob.valueOf(msg));
             gatewayNotificationResponse.setStatusCode(AdyenConstants.HTTP_SUCCESS_CODE);
             System.debug('---->Exiting AdyenPaymentHelper.handleAsyncNotificationCallback after identifying that it was the wrong payment adapter = ' + gatewayNotificationResponse);
         }
@@ -347,7 +173,7 @@ public with sharing class AdyenPaymentHelper {
      * @see https://docs.adyen.com/development-resources/webhooks/understand-notifications
      */
     public static AdyenService.NotificationRequestItem parseAdyenNotificationRequest(CommercePayments.PaymentGatewayNotificationRequest notificationRequest) {
-        String requestBody = Test.isRunningTest() ? TEST_NR_BODY : AdyenPaymentUtility.makeSalesforceCompatible(notificationRequest.getRequestBody().toString());
+        String requestBody = Test.isRunningTest() ? TEST_NOTIFICATION_REQUEST_BODY : AdyenPaymentUtility.makeSalesforceCompatible(notificationRequest.getRequestBody().toString());
         AdyenService.AdyenNotification adyenNotification  = (AdyenService.AdyenNotification) JSON.deserialize(requestBody, AdyenService.AdyenNotification.class);
         AdyenService.NotificationRequestItem notificationRequestItem = new AdyenService.NotificationRequestItem();
         if(adyenNotification != null) {
